--- a/templates/webmobile/timeline/recent_full_page.html
+++ b/templates/webmobile/timeline/recent_full_page.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block jscript %}
-<script type="text/javascript" src="{% url webstatic "javascript/jquery_1.4.2.js" %}"></script>
+{% include "webgateway/base/includes/script_src_jquery.html" %}
 
 <script type="text/javascript">
 $(document).ready(function() {
