--- a/templates/webmobile/index.html
+++ b/templates/webmobile/index.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class='list-item'> 
-    <a href="{% url webmobile_recent 'all' client.user.getId %}">
+    <a href="{% url webmobile_recent 'all' 0 %}"> TODO: 0 should be current userId
         <div class="tab-item">
             Mine
         </div>
