--- a/templates/webmobile/viewers/viewer_iphone.html
+++ b/templates/webmobile/viewers/viewer_iphone.html
@@ -140,7 +140,7 @@ img#imagePlane {
 
 {% block jscript %}
     {% include "webgateway/base/includes/script_src_jquery.html" %}
-    <script type="text/javascript" src="{% url static 'webmobile/js/viewer.js' %}"></script>
+    <script type="text/javascript" src="{% static 'webmobile/js/viewer.js' %}"></script>
 {% endblock %}
 
 {% block body %}
