Perms update inline with 4.4.4 webclient see #9663
Uses request.session['user_id'] and ['group_id'] to keep track
of current group and user.

Add decorators that can look-up the wrapper objects and add them
to the page context for use in the template as ome.active_user
and ome.active_group.
Update pages to use this @render_response decorator.

--- a/templates/webmobile/base/base_header.html
+++ b/templates/webmobile/base/base_header.html
@@ -16,21 +16,28 @@
 
 {% block body %}
 <div id="top-header">
-    <a href="{% url webmobile_index %}">
-        <div style="float:left"><img src="{% static 'webmobile/img/logo.png' %}" border=0 /></div>
-    </a>
-    <div id="top-header-right">
-        Group: <a href="{% url webmobile_groups_members %}">
-            {{ client.getEventContext.groupName }} >
+    <div style="float:left">
+        <a href="{% url webmobile_index %}">
+            <img src="{% static 'webmobile/img/logo.png' %}" border=0 />
         </a>
+        {% block header-title %}{% endblock %}
+    </div>
+    <div id="top-header-right">
+        {{ ome.user.getFullName }}
     </div>
     <div style="clear:both"></div>
 </div>
 
 <div class="header">
     <div id="header-title">
-        {% block header-title %}
-        {% endblock %}
+        Group:
+        <a href="{% url webmobile_choose_group %}">
+            {{ ome.active_group.getName }}
+        </a>
+        User:
+        <a href="{% url webmobile_choose_user %}">
+            {{ ome.active_user.getFullName }}
+        </a>
     </div>
     <div id='header-right'>{% block header-right %}{% endblock %}</div>
     <div style="clear:both"></div>
